assignment-1-react-app/security_group.tf
resource "aws_security_group" "react-app-sg" {
  name   = "react-app-sg"
  vpc_id = aws_vpc.vpc-01.id

  ingress {
    description = "SSH from my IP"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["86.31.34.128/32"]
  }
  ingress {
    from_port       = 80
    to_port         = 80
    protocol        = "tcp"
    security_groups = [aws_security_group.alb_sg.id]
  }


  egress {
    description = "Allow all outbound traffic"
    from_port   = 0
    to_port     = 0
    protocol    = "-1" # All protocols
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "react-app-sg"
  }
}

resource "aws_security_group" "alb_sg" {
  name   = "Application load balancer security group"
  vpc_id = aws_vpc.vpc-01.id

  ingress {
    description = "http from my anywhere"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    description = "Allow all outbound"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }



  tags = {
    Name = "ALB_SG"
  }
}
